--- a/app/views/reu_program/applications/show.haml
+++ b/app/views/reu_program/applications/show.haml
@@ -1,29 +1,33 @@
-.row
-  .col-2
-  .col-8
-    %button.btn.btn-outline-success=link_to'Accept Applicant', accept_reu_program_application_path, method: :patch
-    %button.btn.btn-outline-danger=link_to 'Reject Applicant', reject_reu_program_application_path, method: :patch
-    - @application.data.each do |key, value|
-      - if key.match(/_/)
-        %h3 #{key.split('_').map(&:capitalize).join(' ')}
-      - else
-        %h3= key.capitalize
-      - if value.is_a?(Array)
-        - value.each do |key, value|
-          - key.each do |key, value|
-            %strong #{key.capitalize}:
-            = value
-            %br
-          %br
-      - else
-        - value.each do |key, value|
-          %p
-            %strong #{key.split('_').map(&:capitalize).join(' ')}:
-            - if key.downcase == "date_of_birth"
-              = value.to_date
-            - else
+.container
+  .row
+    .col.d-flex.justify-content-end
+      .btn-group
+        - btn_class = @application.accepted? ? 'btn-success' : 'btn-outline-success'
+        = link_to'Accept Applicant', accept_reu_program_application_path, method: :patch, class: "btn #{btn_class}"
+        - btn_class = @application.rejected? ? 'btn-danger' : 'btn-outline-danger'
+        =link_to 'Reject Applicant', reject_reu_program_application_path, method: :patch, class: "btn #{btn_class}"
+  .row
+    .col
+      - @application.data.each do |key, value|
+        - if key.match(/_/)
+          %h3 #{key.split('_').map(&:capitalize).join(' ')}
+        - else
+          %h3= key.capitalize
+        - if value.is_a?(Array)
+          - value.each do |key, value|
+            - key.each do |key, value|
+              %strong #{key.capitalize}:
               = value
-      %hr
-    %br
-    %p= link_to 'Back', reu_program_applications_path
-  .col-2
+              %br
+            %br
+        - else
+          - value.each do |key, value|
+            %p
+              %strong #{key.split('_').map(&:capitalize).join(' ')}:
+              - if key.downcase == "date_of_birth"
+                = value.to_date
+              - else
+                = value
+        %hr
+      %br
+      %p= link_to 'Back', reu_program_applications_path
