update recommender form sections count when the number required is updated

--- a/app/views/reu_program/recommender_forms/_edit_form.haml
+++ b/app/views/reu_program/recommender_forms/_edit_form.haml
@@ -6,7 +6,7 @@
       .col
         = f.input :recommenders_count
       .col
-        = f.submit 'Save Name', class: 'btn btn-primary float-right'
+        = f.submit 'Save', class: 'btn btn-primary float-right'
 
   .row.border-bottom.mb-2
     .col
