--- a/app/views/applications/status.haml
+++ b/app/views/applications/status.haml
@@ -2,40 +2,49 @@
 
 %h3 Recommenders
 .d-flex.flex-wrap
-  - current_application.recommender_info.fetch('recommenders_form', {}).each do |r|
-    .card.mb-2.mr-2
-      .card-body
-        - r.each do |key, value|
-          %p
-            %strong #{key}:
-            = value
-        - status = @applicant.recommender_statuses.find_by_email(r['Email'])
-        - if status.submitted_at.present?
-          .alert.alert-success.width-200
-            %p Recommender subbmitted a recommendation.
-        - elsif status.last_sent_at.present? && (status.last_sent_at + 1.day) > Time.current
-          .alert.alert-info.width-200
-            %p Notification email sent to recommender at #{status.last_sent_at.strftime('%d/%m/%Y %H:%M')}. You can only notify a recommender once every 24 hours.
-        - else
-          = link_to 'Resend email', recommenders_resend_path(status.id), class: 'btn btn-info btn-sm'
+  - info = current_application.recommender_info.fetch('recommenders_form', {})
+  - if info.empty?
+    .alert.alert-warning.w-100
+      %p Please fill out the information for your recommenders #{link_to 'here', recommenders_path}.
+  - else
+    - info.each do |r|
+      .card.mb-2.mr-2
+        .card-body
+          - r.each do |key, value|
+            %p
+              %strong #{key}:
+              = value
+          - status = @applicant.recommender_statuses.find_by_email(r['Email'])
+          - if status.submitted_at.present?
+            .alert.alert-success.width-200
+              %p Recommender subbmitted a recommendation.
+          - elsif status.last_sent_at.present? && (status.last_sent_at + 1.day) > Time.current
+            .alert.alert-info.width-200
+              %p Notification email sent to recommender at #{status.last_sent_at.strftime('%d/%m/%Y %H:%M')}. You can only notify a recommender once every 24 hours.
+          - else
+            = link_to 'Resend email', recommenders_resend_path(status.id), class: 'btn btn-info btn-sm'
 
 %h3 Application Information
-- current_application.data.each do |key1, value1|
-  .card.mb-2
-    .card-body
-      %h5.card-title= key1.capitalize
-      - case value1
-      - when Array
-        - value1.each do |item|
-          - item.each do |k, v|
+- if current_application.data&.empty?
+  .alert.alert-warning.w-100
+    %p Please fill out the information for your application #{link_to 'here', application_path}.
+- else
+  - current_application.data.each do |key1, value1|
+    .card.mb-2
+      .card-body
+        %h5.card-title= key1.capitalize
+        - case value1
+        - when Array
+          - value1.each do |item|
+            - item.each do |k, v|
+              %p
+                %strong #{k}:
+                = v
+            %hr
+
+        - when Hash
+          - value1.each do |k, v|
             %p
               %strong #{k}:
               = v
-          %hr
-
-      - when Hash
-        - value1.each do |k, v|
-          %p
-            %strong #{k}:
-            = v
 = link_to 'Back', application_path, class: 'btn btn-outline-secondary'
