--- a/app/views/reu_program/fields/edit.haml
+++ b/app/views/reu_program/fields/edit.haml
@@ -13,5 +13,7 @@
       = render partial: 'boolean', locals: { f: f }
     - if f.object.is_a?(Fields::Select)
       = render partial: 'select', locals: { f: f }
+    - if f.object.is_a?(Fields::File)
+      = render partial: 'file', locals: { f: f }
   .modal-footer.d-flex.justify-content-end
     = f.submit 'Save Field', class: 'btn btn-primary'
