--- a/app/views/notification/recommendation_thanks.text.erb
+++ b/app/views/notification/recommendation_thanks.text.erb
@@ -1,5 +1,5 @@
-Dear <%= @recommendation.recommender.first_name %>,
+Dear <%= @recommender_first_name %> <%= @recommender_last_name%>,
 
-<%= @recommendation.applicant.name %>'s recommendation for the <%= Setting[:app_title] %> summer program at the <%= Setting[:department] %>, <%= Setting[:university] %> has been received.
+<%= @applicant_first_name %> <%= @applicant_last_name %>'s recommendation for the <%= Setting[:app_title] %> summer program at the <%= Setting[:department] %>, <%= Setting[:university] %> has been received.
 
 Thank you taking the time to provide us with this helpful information.
