--- a/app/views/applicants/academic_records/edit.html.erb
+++ b/app/views/applicants/academic_records/edit.html.erb
@@ -9,10 +9,13 @@
       </div>
 
       <div class="form-group">
-        <%= f.fields_for :records do |builder| %>
-          <%= render 'record_fields', f: builder %>
-        <% end %>
-        <div class="add-container"><%= link_to_add_fields "Add institution", f, :records %></div>
+        <div class="panel-heading">Academic Information</div>
+        <div class="panel-body">
+          <%= f.fields_for :records do |builder| %>
+            <%= render 'record_fields', f: builder %>
+          <% end %>
+          <div class="add-container"><%= link_to_add_fields "Add institution", f, :records %></div>
+        </div>
       </div>
 
     <div class="panel-heading">GPA Comments</div>
