--- a/app/views/applicants/registrations/status.html.erb
+++ b/app/views/applicants/registrations/status.html.erb
@@ -61,14 +61,6 @@
     </ul>
   </div>
 
-  <div class="panel-heading">Personal Statement</div>
-    <div class="panel-body">
-
-    <ul class="form-group">
-      <li><%= current_applicant.statement if current_applicant.statement %></li>
-    </ul>
-  </div>
-
   <div class="panel-heading">How did you hear about us?</div>
     <div class="panel-body">
 
@@ -126,9 +118,10 @@
   <div class="panel-body">
 
     <ul class="form-group">
+      <li><b>Personal Statement:</b> <%= raw(Markdown.render(current_applicant.interest.statement)) if current_applicant.interest %>
+      <li><b>Facing Challenges Experience:</b> <%= raw(Markdown.render(current_applicant.interest.facing_challenges_experience)) if current_applicant.interest %>
       <li><b>Research Experience:</b> <%= raw(Markdown.render(current_applicant.interest.research_experience)) if current_applicant.interest %>
       <li><b>Leadership Experience:</b> <%=raw(Markdown.render(current_applicant.interest.leadership_experience)) if current_applicant.interest %></li>
-      <li><b>Programming Experience:</b> <%= raw(Markdown.render(current_applicant.interest.programming_experience)) if current_applicant.interest %>
       <li><b>Computer Skills:</b> <%= raw(Markdown.render(current_applicant.interest.cpu_skills)) if current_applicant.interest %>
     </ul>
   </div>
