clean up dashboard page

--- a/app/assets/stylesheets/b4admin.scss
+++ b/app/assets/stylesheets/b4admin.scss
@@ -1,11 +1,11 @@
 @import "bootstrap";
 
-.alert {
-    width: 180px;
-    height: 60px; 
-    padding: .75rem;
-    text-align: center;
-}
+// .alert {
+//     width: 180px;
+//     height: 60px;
+//     padding: .75rem;
+//     text-align: center;
+// }
 
 .content-box.box-default {
     background-color: #f6f6f6;
