add max length validation

--- a/app/views/reu_program/fields/_long_text.haml
+++ b/app/views/reu_program/fields/_long_text.haml
@@ -8,4 +8,4 @@
     = f.input :description, as: :text, hint: f.object.description_hint
 .row
   .col
-    = f.input :min_length, as: :integer, hint: f.object.min_length_hint
+    = f.input :max_length, as: :integer, hint: f.object.max_length_hint
