--- a/app/views/reu_program/application_forms/_edit_form.haml
+++ b/app/views/reu_program/application_forms/_edit_form.haml
@@ -10,7 +10,9 @@
     .col
       %h3 Sections
     .col
-      = link_to 'New Section', new_reu_program_application_form_section_path(@form), class: 'btn btn-primary float-right'
+      .btn-group.float-right
+        = link_to 'New Section', new_reu_program_application_form_section_path(@form), class: 'btn btn-primary'
+        %button.btn.btn-secondary(type="button" data-toggle="modal" data-target="#reorderSections") Reorder Sections
 
   %table.table
     %thead
@@ -21,14 +23,16 @@
         %th.text-right Actions
     %tbody
       - @form.sections.each do |section|
+        - id = "reorderFields#{section.id}"
         %tr
           %td= section.title
           %td= section.repeating ? 'Yes' : 'No'
-          %td= section.count
+          %td= section.repeating ? section.count : ''
           %td.text-right
             .btn-group
               %button.btn.btn-outline-secondary.btn-sm(type="button" data-target="show-fields" data-section="#{section.id}") Show Fields
               = link_to 'Edit', edit_reu_program_application_form_section_path(@form, section), class: 'btn btn-outline-secondary btn-sm'
+              %button.btn.btn-outline-secondary.btn-sm(type="button" data-toggle="modal" data-target="##{id}") Reorder Fields
               - unless section.important
                 = link_to 'Delete', reu_program_application_form_section_path(@form, section), method: :delete, data: { confirm: 'Are you sure you want to delete this section?' }, class: 'btn btn-outline-danger btn-sm'
               - else
@@ -75,6 +79,72 @@
 
 .mt-5.mb-5
 
+.modal#reorderSections
+  .modal-dialog
+    .modal-content
+      .modal-header
+        %h5.modal-title Reorder Sections
+        %button.close(type="button" data-dismiss="modal")
+          %span== &times;
+      .modal-body
+        %ul.list-group#reorder-sections-list
+          - @form.sections.each do |section|
+            %li.list-group-item(data-id="#{section.id}")
+              = icon('fas', 'grip-lines', style: 'cursor: grab;')
+              = section.title
+      .modal-footer
+        %button.btn.btn-secondary(type="button" data-dismiss="modal") Close
+        = link_to 'Change Order', '', class: 'btn btn-primary', data: { target: 'reorder-section-btn' }
+
+  :javascript
+    ;(function() {
+      var ids = []
+      var path = '#{reorder_sections_reu_program_application_form_path(@form)}'
+      var sortable = new Sortable(document.getElementById('reorder-sections-list'), {
+        group: 'reorderSections',
+        onEnd: function(e) {
+          ids = $('#reorder-sections-list li').map(function() { return this.dataset.id }).toArray()
+          console.log(ids)
+          $('[data-target="reorder-section-btn"]').attr('href', path + '?reorder_sections=' + ids.join('--'))
+        }
+      })
+    })()
+
+- @form.sections.each do |section|
+  - id = "reorderFields#{section.id}"
+  - list_id = "reorder-fields-list-#{section.id}"
+  .modal(id="#{id}")
+    .modal-dialog
+      .modal-content
+        .modal-header
+          %h5.modal-title Reorder fields
+          %button.close(type="button" data-dismiss="modal")
+            %span== &times;
+        .modal-body
+          %ul.list-group(id="#{list_id}")
+            - section.fields.each do |field|
+              %li.list-group-item(data-id="#{field.id}")
+                = icon('fas', 'grip-lines', style: 'cursor: grab;')
+                = field.title
+        .modal-footer
+          %button.btn.btn-secondary(type="button" data-dismiss="modal") Close
+          = link_to 'Change Order', '', class: 'btn btn-primary', data: { target: 'reorder-field-btn' }
+
+    :javascript
+      ;(function() {
+        var ids = []
+        var path = '#{reorder_fields_reu_program_application_form_section_path(@form, section)}'
+        var sortable = new Sortable(document.getElementById('#{list_id}'), {
+          group: '#{id}',
+          onEnd: function(e) {
+            ids = $('##{id} li').map(function() { return this.dataset.id }).toArray()
+            console.log('#{id}', '#{list_id}', ids)
+            $('##{id} [data-target="reorder-section-btn"]').attr('href', path + '?reorder_sections=' + ids.join('--'))
+          }
+        })
+      })()
+
+
 .modal#fieldFormModal
   .modal-dialog
     .modal-content
@@ -85,7 +155,7 @@
     %h3.d-inline-block Loading
 
 :javascript
-  (function() {
+  ;(function() {
 
     var myWhiteList = $.fn.tooltip.Constructor.Default.whiteList
     myWhiteList['select'] = ['data-target', 'data-path']
